# StockPull

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  db.py  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  commands_common.py  commands_db.py  commands_futu.py  commands_meta.py  commands_prices.py  commands_tushare.py  deprecate.py  parser.py
core/: batch_utils.py  db_client.py  http_utils.py  local_buffer.py  progress.py  retry_utils.py  trading_calendar.py
data/: base.py  etf_updater_cn.py  hsi_constituents.csv  index_base.py  index_updater_cn.py  index_updater_hk.py  index_updater_russell1000.py  index_updater_us.py  intraday_updater_us.py  market_cn.py  market_hk.py  market_us.py  pipeline.py  reconcile.py  stock_updater_cn.py  stock_updater_cn_tushare.py  stock_updater_cn_weekly.py  stock_updater_hk.py  stock_updater_us.py  stock_updater_us_weekly.py  ticker_utils.py  yf_client.py
docs/: SPEC_code_review_followup.md
futu_ingest/: backfill_actions.py  backfill_earnings.py  backfill_efficiency.py  backfill_financial.py  backfill_profile.py  backfill_revenue.py  backfill_shareholders.py  client.py  concurrency.py  local_buffer.py  orchestrator.py  snapshot_daily.py  snapshot_daily_ext.py  snapshot_weekly.py  sync.py
jobs/: market_cn.py  market_hk.py  market_us.py  pipeline.py
modules/: db_admin.py  index_base.py  price_write.py  sync_log.py
scripts/: backfill_hk_yfinance.py  backfill_sp500_yfinance.py  clear_sp500_sync.py  daily_update.sh  probe_futu_limits.py  verify_cn_etfs.py  verify_futu_apis.py
sql/: 001_tushare_tables.sql  (+11 more)
(+193 files in other folders)
