[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-b"
version = "0.1.0"
description = "Unified daily-K ingest (US + A-share + HK) writing into shared NAS MariaDB"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
