[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-b"
version = "0.1.0"
description = "Unified daily-K ingest (US + A-share + HK) writing into shared NAS MariaDB"
requires-python = ">=3.11"
dependencies = [
    "pymysql>=1.0.3",
    "yfinance>=0.2.40",
    "akshare>=1.16.0",
    "efinance>=0.5.4",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tushare>=1.4.0",
]

[tool.setuptools.packages.find]
exclude = ["sql*", "logs*", "backups*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
